--- a/package.json
+++ b/package.json
@@ -1,25 +1,14 @@
 {
   "name": "hack2skill_task1_backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "repository": "https://github.com/iam-riyaz/hack2skill_task1_backend.git",
+  "author": "riyaz ahmad <riyaz.ahmad@indusnet.co.in>",
+  "license": "MIT",
   "type": "module",
   "scripts": {
-    "build": "babel src -d dist",
-    "start": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/iam-riyaz/hack2skill_task1_backend.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/iam-riyaz/hack2skill_task1_backend/issues"
-  },
-  "homepage": "https://github.com/iam-riyaz/hack2skill_task1_backend#readme",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
